# fastapi-template

./: README.md  alembic.ini  pyproject.toml
src/app/adapters/: db.py  stub_db.py
src/app/adapters/sqlalchemy_db/: gateway.py  models.py
src/app/adapters/sqlalchemy_db/migrations/: env.py
src/app/adapters/sqlalchemy_db/migrations/versions/: 20230814-120653_88bf578b9804_initial_version.py
src/app/api/: __init__.py  depends_stub.py  root.py
src/app/application/: generator.py  users.py
src/app/application/models/: __init__.py  user.py
src/app/application/protocols/: database.py
src/app/main/: __init__.py  di.py  di_stub.py  ioc.py  routers.py  web.py
src/app/presentation/: depends_stub.py  generator.py  index.py  users.py
tests/: test_generator.py
